<resources>
    <string name="app_name">RapCloud</string>
    <string name="fast_login_with_google">ورود سریع با گوگل</string>
    <string name="email_label">ایمیل</string>
    <string name="password">رمز ورود</string>
    <string name="repeat_password">تکرار رمز عبور</string>
    <string name="go_label">Go</string>
    <string name="signin_label">قبلا ثبت نام کردم</string>
    <string name="signup_label">ثبت نام</string>
    <string name="or">یا</string>
    <string name="success_login">با موفقیت وارد شدید</string>
    <string name="email_is_not_valid">آدرس ایمیل اشتباه است</string>
    <string name="google_tahrim">به دلیل تحریم های گوگل برای ورود/یا ثبت نام نیاز به vpn هست ):</string>
    <string name="email_address_badly_formatted">فرمت آدرس ایمیل اشتباه است</string>
    <string name="email_address_already_in_use">آدرس ایمیل قبلاً توسط حساب دیگری استفاده شده است</string>
    <string name="authenticateion_link_sent">لینک فعال سازی به ایمیل شما ارسال شد</string>
</resources>